# baremetal-claude

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  build.sh  limine.conf  run.ps1  x86_64-claudio.json
.cargo/: config.toml
.playwright-mcp/: compass-artifact-wf-ca3ca8b0-7948-4f16-b648-93b7014015f5-text-markdown.md  completion-request.txt  completion2.txt  page-2026-04-04T19-50-22-924Z.yml  page-2026-04-04T19-50-43-427Z.yml  page-2026-04-04T19-50-58-206Z.yml  page-2026-04-04T19-51-22-261Z.yml  page-2026-04-04T19-52-08-136Z.yml  page-2026-04-04T20-12-28-208Z.yml  page-2026-04-04T20-13-08-334Z.yml
FR/: roadmap.md
crates/acpi/: Cargo.toml
crates/acpi/src/: fadt.rs  hpet.rs  lib.rs  madt.rs  mcfg.rs  power.rs  rsdp.rs  sdt.rs
crates/agent/: Cargo.toml
crates/agent/src/: compaction.rs  lib.rs
crates/ahci/: Cargo.toml
crates/ahci/src/: command.rs  driver.rs  hba.rs  identify.rs  lib.rs  port.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: lib.rs  messages.rs  permissions.rs  streaming.rs  tools.rs
crates/arbitrary-stub/: Cargo.toml
crates/arbitrary-stub/src/: lib.rs
crates/asm-x86/src/: encoder.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/btrfs/src/: chunk.rs  compress.rs  crc32c.rs  lib.rs  readwrite.rs  tree.rs
crates/cc-lite/src/: codegen.rs  lexer.rs  libc.rs  parser.rs  sema.rs
crates/cpp-lite/: Cargo.toml
crates/cpp-lite/src/: ast.rs  driver.rs  lexer.rs  lib.rs  name_mangling.rs  parser.rs  stdlib.rs  templates.rs  vtable.rs
crates/cranelift-codegen-nostd/: Cargo.toml
crates/cranelift-codegen-shared-nostd/: Cargo.toml
crates/cranelift-codegen-shared-nostd/src/: lib.rs
crates/cranelift-control-nostd/: Cargo.toml
crates/cranelift-control-nostd/src/: lib.rs
crates/dotnet-clr/: Cargo.toml
crates/dotnet-clr/src/: gc.rs  il.rs  interop.rs  lib.rs
crates/dxvk-bridge/: Cargo.toml
crates/dxvk-bridge/src/: d3d9.rs  dxgi.rs  lib.rs
crates/elf-loader/src/: loader.rs
crates/ext4/src/: block_map.rs  crc32c.rs  encrypt.rs  extent.rs  htree.rs  inode.rs  journal.rs  lib.rs  readwrite.rs  superblock.rs
crates/fs-persist/: Cargo.toml
crates/fs-persist/src/: lib.rs
crates/go-lite/: Cargo.toml
crates/go-lite/src/: ast.rs  codegen.rs  driver.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  stdlib.rs  types.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: driver.rs  fifo.rs  lib.rs  memory.rs  tensor.rs
crates/hda/: Cargo.toml
crates/hda/src/: codec.rs  driver.rs  lib.rs  registers.rs  stream.rs  widget.rs
crates/intel-nic/: Cargo.toml
crates/intel-nic/src/: descriptors.rs  e1000.rs  i225.rs  lib.rs  phy.rs  regs.rs
crates/js-lite/: Cargo.toml
crates/js-lite/src/: eval.rs  lib.rs  parser.rs
crates/jvm-lite/: Cargo.toml
crates/jvm-lite/src/: bytecode.rs  classfile.rs  classloader.rs  driver.rs  gc.rs  lib.rs  stdlib.rs  vm.rs
crates/linux-compat/src/: dispatcher.rs  file_ops.rs  memory_ops.rs
crates/llm/: Cargo.toml
crates/llm/src/: generate.rs  gguf.rs  lib.rs  sampler.rs  tensor.rs  tokenizer.rs  transformer.rs
crates/lua-lite/: Cargo.toml
crates/lua-lite/src/: ast.rs  compiler.rs  driver.rs  lexer.rs  lib.rs  parser.rs  stdlib.rs  table.rs  vm.rs
crates/net/: Cargo.toml
crates/net/src/: dns.rs  http.rs  lib.rs  nic.rs  stack.rs  tls.rs
crates/ntfs/src/: attribute_list.rs  compression.rs  data_runs.rs  index.rs  journal.rs  lib.rs  mft.rs  readwrite.rs
crates/nvme/: Cargo.toml
crates/nvme/src/: admin.rs  driver.rs  lib.rs  queue.rs
crates/pe-loader/: Cargo.toml
crates/pe-loader/src/: dos_header.rs  imports.rs  lib.rs  loader.rs  pe_header.rs
crates/python-lite/src/: eval.rs  parser.rs  tokenizer.rs
crates/rtl8168/: Cargo.toml
crates/rtl8168/src/: descriptors.rs  driver.rs  (+2 more)
crates/rustc-hash-nostd/: Cargo.toml
crates/rustc-lite/: Cargo.toml
crates/rustc-lite/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  linker.rs  parser.rs  typeck.rs  types.rs
crates/shell/: Cargo.toml
crates/smp/: Cargo.toml
crates/sshd/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal-core/: Cargo.toml
crates/ts-lite/: Cargo.toml
crates/ts-lite/src/: driver.rs  lexer.rs  lib.rs  transformer.rs  type_checker.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: adapters.rs  device.rs  lib.rs  path.rs  vfs.rs
crates/vulkan/: Cargo.toml
crates/vulkan/src/: dispatch.rs  instance.rs  lib.rs  memory.rs  surface.rs  swapchain.rs  sync.rs
crates/wasm-runtime/: Cargo.toml
crates/win32/: Cargo.toml
crates/win32/src/: advapi32.rs  dispatcher.rs  kernel32.rs  lib.rs  ntdll.rs  registry.rs  shell32.rs  teb_peb.rs  unicode.rs  user32.rs  wasapi.rs  winmm.rs  ws2_32.rs
crates/winrt/: Cargo.toml
crates/winrt/src/: lib.rs
crates/wraith-dom/: Cargo.toml
crates/xhci/: Cargo.toml
docs/: AGENTS.md  COMPARISON.md  FILESYSTEMS.md  GROWTH-STRATEGY.md  HARDWARE.md  OFFLINE-MANUAL.md  OPEN-SOURCE-CRATES.md  ROADMAP.md  SECURITY-AUDIT.md  SHELL.md  WRAITH-BAREMETAL-PORT.md  api-protocol.md  architecture.md  building.md  contributing.md  networking.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: acpi_init.rs  agent_loop.rs  agent_memory.rs  boot_sound.rs  conversations.rs  csprng.rs  dashboard.rs  disks.rs  dotnet_compat.rs  email.rs  encryption.rs  executor.rs  filemanager.rs  firewall.rs  framebuffer.rs  gdt.rs  git.rs  image_viewer.rs  init.rs  intel_nic.rs  interrupts.rs  ipc.rs  keyboard.rs  linux_compat.rs  logger.rs  main.rs  memory.rs  mmio_repl.rs  mouse.rs  ntp.rs  pci.rs  qr.rs  rtc.rs  rtl8168_nic.rs  screensaver.rs  serial.rs  session_manager.rs  smp_init.rs  splash.rs  ssh_server.rs  (+8 more)
site/: docs.html  index.html  style.css
site/blog/: building-os-in-rust-with-ai.html  index.html
tools/: auth-relay.py  export-gguf.py  fine-tune-980.py  fine-tune.py  flash-usb.py  generate-manual-data.py  generate-training-data.py  manual-training-data.jsonl  notify-telegram.sh  telegram-get-chat-id.sh  telegram-inbox.py  tls-bridge.py  tls-proxy.py
tools/image-builder/: Cargo.toml
tools/image-builder/.cargo/: config.toml
tools/image-builder/src/: main.rs
(+70 files in other folders)
