[package]
name = "claudio-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bootloader_api = { workspace = true }
x86_64 = { workspace = true }
linked_list_allocator = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
conquer-once = { workspace = true }
pc-keyboard = { workspace = true }
noto-sans-mono-bitmap = { workspace = true }
vte = { workspace = true }

# Internal crates
claudio-terminal = { path = "../crates/terminal" }

# Phase 2+ crates (disabled until Phase 1 boots):
# claudio-net = { path = "../crates/net" }       # Phase 2: networking + TLS
# claudio-api = { path = "../crates/api-client" } # Phase 3: API client
# claudio-auth = { path = "../crates/auth" }      # Phase 3: auth
# claudio-agent = { path = "../crates/agent" }    # Phase 4: agent sessions
# claudio-fs = { path = "../crates/fs-persist" }  # Phase 3: persistence
