[package]
name = "claudio-agent"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
claudio-api = { path = "../api-client" }
claudio-auth = { path = "../auth" }
claudio-terminal = { path = "../terminal" }
claudio-net = { path = "../net" }
