[package]
name = "claudio-dxvk-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DirectX to Vulkan translation layer for ClaudioOS — DXVK-style D3D9/D3D11/D3D12 over claudio-vulkan"

[dependencies]
log = { workspace = true }
spin = { workspace = true }
