[package]
name = "claudio-go-lite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal Go compiler targeting x86_64 via Cranelift for ClaudioOS bare-metal environment"

[dependencies]
log = { workspace = true }
spin = { workspace = true }
cranelift-codegen = { version = "0.116", default-features = false, features = ["core", "x86"] }
cranelift-frontend = { version = "0.116", default-features = false, features = ["core"] }
