[package]
name = "claudio-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bare-metal NVIDIA GPU compute driver for ClaudioOS — no_std, MMIO, Falcon, FIFO, tensor ops for LLM inference"

[dependencies]
log = { workspace = true }
spin = { workspace = true }
