[package]
name = "claudio-net"
version.workspace = true
edition.workspace = true

[dependencies]
smoltcp = { workspace = true }
# embedded-tls needs SSE target features — requires FPU/SSE init in kernel first
# Using host-side TLS proxy for development (tools/tls-proxy.py)
log = { workspace = true }
spin = { workspace = true }
x86_64 = { workspace = true }
