[package]
name = "claudio-vfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "no_std Virtual Filesystem layer for ClaudioOS — unifies ext4, btrfs, NTFS, FAT32 behind a single API"

[dependencies]
log = { workspace = true }
spin = { workspace = true }
claudio-ext4 = { path = "../ext4" }
claudio-btrfs = { path = "../btrfs" }
claudio-ntfs = { path = "../ntfs" }
claudio-ahci = { path = "../ahci" }
claudio-nvme = { path = "../nvme" }
