[package]
name = "claudio-vulkan"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vulkan 1.3 implementation for ClaudioOS — no_std, targets bare-metal NVIDIA GPU via claudio-gpu"

[dependencies]
log = { workspace = true }
spin = { workspace = true }
