[package]
name = "claudio-winrt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "no_std WinRT (Windows Runtime) for ClaudioOS — WinRT activation, projections, and async patterns on bare metal"

[dependencies]
log = { workspace = true }
spin = { workspace = true }
